# nuxtor

./: .env.example  .gitignore  .nuxtignore  LICENSE  README.md  README.zh-CN.md  bump.config.ts  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  preview.md  tsconfig.json  uno.config.ts
.claude/: settings.local.json
.github/workflows/: release-v2.yml  release.yml
.zed/: settings.json
app/: app.config.ts  app.vue  router.options.ts
app/assets/css/: main.css
app/components/: Btn.vue  Hyperlink.vue  NavLink.vue
app/components/Design/: BottomBlob.vue  TopBlob.vue
app/components/Layout/: Tile.vue
app/components/Site/: Navbar.vue  Sidebar.vue
app/components/Tab/: Row.vue
app/composables/: pages.ts  sidebar.ts
app/layouts/: blank.vue  default.vue  home.vue
app/middleware/: sidebar.global.ts
app/modules/: tauri.ts
app/pages/: [...all].vue  commands.vue  converter.vue  file.vue  index.vue  notifications.vue  os.vue  store.vue  webview.vue
scripts/: bump.ts  tauri.dev.ts
src/: app.vue
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Btn.vue  Hyperlink.vue  NavLink.vue  Test.vue
src/components/Design/: BottomBlob.vue  TopBlob.vue
src/components/Layout/: Tile.vue
src/components/Site/: Navbar.vue  Sidebar.vue
src/components/Tab/: Row.vue
src/composables/: constants.ts  sidebar.ts  test.ts
src/layouts/: blank.vue  default.vue  home.vue
src/middleware/: sidebar.global.ts
src/modules/: tauri.ts
src/pages/: [...all].vue  command.vue  commands.vue  file.vue  index.vue  notification.vue  notifications.vue  os.vue
types/: global.d.ts
